[package]
name = "mvlogger"
version = "0.2.4"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.75.0"
authors = [
    "Maxim Savenkov",
    "Julian Hohenhausen"
]
repository = "https://github.com/TeamMV/MVLogger"
keywords = [
    "logger",
    "mvteam",
    "mvlogger"
]
description = "A logger crate used for TeamMV projects."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log ="0.4.20"
mvutils = "0.5.5"
