[package]
name = "mvlogger"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.75.0"
authors = [
    "Maxim Savenkov"
]
repository = "https://github.com/TeamMV/MVLogger"
keywords = [
    "logger",
    "mvteam",
    "mvlogger"
]
description = "A logger crate used for TeamMV projects."

[dependencies]
log ="0.4.20"
mvutils = "1.1.7"
